JETcompiler/Tests/bad/bad021.myout
Function "main" does not contain a return statement, line 5
